--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
   <id>ca.rightsomegoodgames.HythonPlugin</id>
-  <name>HythonPlugin</name>
+  <name>Houdini Python Support</name>
   <version>1.0</version>
   <vendor email="chris@rightsomegoodgames.ca" url="http://github.com/cmcpasserby">RightSomeGoodGames</vendor>
 
